Debugging: automated degugger was flagging licensing files
Per the in-built licensing there are clauses to prevent editing of the licenses
themselves, makes sense to those into leagalieze, so we must tell Code Climate
to ignore them. Additionaly had to add tracking for new helper script directory.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,6 +8,7 @@ ratings:
     - ".gitignore"
     - "Documentation/**"
     - "Licenses/**"
+    - "Script_Helpers/**"
     - "Paranoid_Pipes.sh"
     - "ReadMe.md"
 exclude_paths:
@@ -16,3 +17,6 @@ exclude_paths:
   - "**.log"
   - "**.pipe"
   - "Bulk_**/**"
+  - "bulk_**/**"
+  - "Licenses/GNU_AGPLv3_Code.md"
+  - "Licenses/GNU_FDLv1.3_Documentation.md"
