Touch many files
Most of the changes took place within the travis-ci directory and the
associated yml file... hopefully build errors will be after depend-install
steps. Bug stomped read lines within the main script and have converted
them into echo/read lines because some versions of bash do not support the
"-p" option. Coloring code bugs have been noted on one set of devices,
however, further tests will need to be made before the authors decide to
remove prettyfacation of messages. Minor changes to documentation
directory, mostly to reduce the ammount of issues generated by Code
Climate. Added a few spiciffic ignore hashes for spiciffic files that where
getting dinged for intintionally long lines.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,6 +3,19 @@ engines:
     enabled: true
   markdownlint:
     enabled: true
+    ## Ignore long line within the following files. Because the authors either
+    ##  intentionally have some long lines within documentation or are not able
+    ##  to further shrink lines, likely do to an example within the referenced
+    ##  document file.
+    exclude_fingerprints:
+    ## Documentation/Gnupg_configuration.md
+    - 3d0b30e5ad08b22a310e570eaebb1b49
+    ## Documentation/Contributing_code_initial_setup.md
+    - c36a75ab0ce27f1dbbddf073cce76029
+    ## Documentation/Paranoid_Pipes_Asymmetric_Encryption.md
+    - f7f431e54080b0bad206655a5bd056b2
+    ## Documentation/Contributing_code_maintenance.md
+    - 236ac3d1d79365b808a5c57368f01da2
 ratings:
   paths:
     - ".gitignore"
