--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-sudo: required
+## Bellow caused apt-get to fail?
+##  trying a third time without
+##  sudo level permissions.
+#sudo: required
 ## Settings for git
 git:
  depth: 3
