--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,41 @@
+## Note the lines that are ignored are ignored for a reason, usually because
+##  the authors of this project have tested things on multiple versions of
+##  Bash and have found their own code prefferances to be more portable. Or
+##  for documentation it is usually warnings about line lenghths that are
+##  intentionally long.
 engines:
   shellcheck:
     enabled: true
+    ## Ignore script bug warnings that are not bugs but intentional Bash
+    ##  scripting behavior. These ignore lines will be verbose to avoid
+    ##  confustion of readers & auditers.
+    exclude_fingerprints:
+    ## Paranoid_Pipes.sh
+    ##  The following disables "Double quote to prevent globbing and word
+    ##  splitting" for the "_line_wrap_messages" variable assigning lines.
+    ##  This is because the authors have already quoted what should be quoted
+    ##  and have tested other quoting methods and found them to be either bugy
+    ##  or incorect in resulting formating of outputed message. Note this also
+    ##  effects tests run for finding non-local script help, however, those
+    ##  are also quoted where they should be.
+    - 00468cf5be0161edd724577a36ad7952
+    ##  The following disables "Can't follow non-constant source. Use a
+    ##  directive to specify location." warnings for
+    ##  'source "${Var_source_var_file}"' because this set within the argument
+    ##  reader function dynamicly.
+    - cc4191cd1d8ee72bd63aa28e4b3509dc
+    ##  The following disables "$/${} is unnecessary on arithmetic variables."
+    ##  The authors have found through their own testing and text editers that
+    ##  without the curly brackets, syntax highlighting and other things go
+    ##  a little funky on older Bash versions.
+    - 18621e790df9a1247c47c11dfa363fe0
+    ## Script_Helpers/Paranoid_Pipes_Scenario_Three.sh
+    ##  The following disables the "ssh" command usage being called an error
+    ##  Code Climate warns that the current usage will expand the
+    ##  "${_command}" variable on the client side if un-escaped. This is the
+    ##  intent of the parent function, to expand the variable ssh on the
+    ##  client before sending the expanded commands to the host.
+    - 6490afd50cb628ca4d4857ab5a245c63
   markdownlint:
     enabled: true
     ## Ignore long line within the following files. Because the authors either
@@ -16,6 +51,8 @@ engines:
     - f7f431e54080b0bad206655a5bd056b2
     ## Documentation/Contributing_code_maintenance.md
     - 236ac3d1d79365b808a5c57368f01da2
+    ## Documentation/Paranoid_Pines_CLO.md
+    - 3c8aa6c39631ae3f67ca7b5c9e0de2df
 ratings:
   paths:
     - ".gitignore"
