--- a/.travis.yml
+++ b/.travis.yml
@@ -11,23 +11,29 @@ os:
 language:
  - bash
 ## Custom setup prior to testing project, install dependencies & configure
+##  The first installs dependancies via apt-get and uses sudo/root level
+##  permissions, this should be the only build script that requires them.
 before_install:
  - chmod +x .travis-ci/before_install_depends.sh
  - .travis-ci/before_install_depends.sh
- - chmod +x .travis-ci/before_install_gen_key.sh
- - .travis-ci/before_install_gen_key.sh
- - chmod +x .travis-ci/before_install_test_key.sh
- - .travis-ci/before_install_test_key.sh
-## Steps for successful install once dependencies are met.
+## Steps for successful install once dependencies are met. Simply copies the
+##  main script of this project to common install path and runs '--help'
+##  command line option against it. Currently passing and operating correctly.
 install:
  - chmod +x .travis-ci/install.sh
  - .travis-ci/install.sh
 ## Steps to complete prior to running further tests.
-#before_script:
-# - chmod +x 
-# - .travis-ci/
-## Run tests for travis-ci.org to report on; should no longer require root/sudo
-##  level permissions.
+##  The first sets up temperary passphrase file as well as GPG key pare.
+##  The second test the new key pare by encrypting a string as well as
+##  decrypting the test string and reporting on if the decrypted file contence
+##  matches the original test string. Currently all are passing and operating
+##  corectly.
+before_script:
+ - chmod +x .travis-ci/before_script_gen_key.sh
+ - .travis-ci/before_script_gen_key.sh
+ - chmod +x .travis-ci/before_script_test_key.sh
+ - .travis-ci/before_script_test_key.sh
+## Run tests for travis-ci.org to report on
 script:
  - chmod +x .travis-ci/script_encrypt.sh
  - .travis-ci/script_encrypt.sh
