Moved helper function to its own script
Edited related documentation to reflect this change. Added build script
directory to Code Climate bug tracking configuration file. Modified
Scenario_One helper script for better readabilaty but will have to fully
test it via auto builds...

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -67,6 +67,7 @@ ratings:
     - "Documentation/**"
     - "Licenses/**"
     - "Script_Helpers/**"
+    - ".travis-ci/**"
     - "Paranoid_Pipes.sh"
     - "ReadMe.md"
 exclude_paths:
