Re-wrote portions of build scripts
Based off timing signatures of auto-builds the authors have moved some of
the tests to just before sending a quit string to the named pipe file. Also
re-wrote and reenabled the decryption build tests for this build to check
if remote builds match local tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,9 @@ before_script:
 script:
  - chmod +x .travis-ci/script_encrypt.sh
  - .travis-ci/script_encrypt.sh
-## Dissabled decryption checks until local tests are complete.
-# - chmod +x .travis-ci/script_decrypt.sh
-# - .travis-ci/script_decrypt.sh
+## Re-enabled decryption checks for remote builds.
+ - chmod +x .travis-ci/script_decrypt.sh
+ - .travis-ci/script_decrypt.sh
 ## Setps to complete after success or falure
 #after_success:
 #after_failure:
