Fixed some bugs prematurly & fixed .travis.yml
Forgot to add '-x' opton to chmod commands within .travis.yml file, should
be runnable now. Also fixed some variables that did not error out becasue
the script never got run.

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,9 +51,9 @@ script:
 ##  makes use of helper script for feeding the named pipe. Note the following
 ##  two build scripts may cause failures if there are typos.
 after_success:
- - chmod .travis-ci/script_decrypt_copy.sh
+ - chmod +x .travis-ci/script_decrypt_copy.sh
  - .travis-ci/script_decrypt_copy.sh
- - chmod .travis-ci/script_encrypt_copy.sh
+ - chmod +x .travis-ci/script_encrypt_copy.sh
  - .travis-ci/script_encrypt_copy.sh
 #after_failure:
 ## Steps to run for deployment of build if any
