--- a/.travis.yml
+++ b/.travis.yml
@@ -50,11 +50,11 @@ script:
 ##  Run encryption/decryption save script copy tests. Note decryption still
 ##  makes use of helper script for feeding the named pipe. Note the following
 ##  two build scripts may cause failures if there are typos.
-after_success:
- - chmod +x .travis-ci/script_encrypt_copy.sh
- - .travis-ci/script_encrypt_copy.sh
- - chmod +x .travis-ci/script_decrypt_copy.sh
- - .travis-ci/script_decrypt_copy.sh
+#after_success:
+# - chmod +x .travis-ci/script_encrypt_copy.sh
+# - .travis-ci/script_encrypt_copy.sh
+# - chmod +x .travis-ci/script_decrypt_copy.sh
+# - .travis-ci/script_decrypt_copy.sh
 #after_failure:
 ## Steps to run for deployment of build if any
 #before_deploy:
