--- a/.travis.yml
+++ b/.travis.yml
@@ -47,10 +47,15 @@ script:
  - chmod +x .travis-ci/script_decrypt.sh
  - .travis-ci/script_decrypt.sh
 ## Setps to complete after success or falure
+after_success:
+##  Run helper decryption again but this time test features of searching
+##  decrypted output prior to saving to a file. This is usefull for saving
+##  space for limited resources bound devices.
+  - chmod +x .travis-ci/test_search_script_decrypt.sh
+  - .travis-ci/test_search_script_decrypt.sh
 ##  Run encryption/decryption save script copy tests. Note decryption still
 ##  makes use of helper script for feeding the named pipe. Note the following
 ##  two build scripts may cause failures if there are typos.
-#after_success:
 # - chmod +x .travis-ci/script_encrypt_copy.sh
 # - .travis-ci/script_encrypt_copy.sh
 # - chmod +x .travis-ci/script_decrypt_copy.sh
