Rewriting some comments and main script edits
Trying null option in main script, perhaps the '-T' option was causing new
bugs with file regonition. Clarified build comments in relation to where
'sudo' permitions are used within the auto builds. Commented out some of
the added *junk* code within encryption build script to aid in re-debugging
file encryption via named pipe writes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 ## Authors note: add "[ci skip]" or "[skip ci]" in commit message to
 ##  disable building for the next push.
-## Required for apt-get commands only
+## Required for apt-get commands within '.travis-ci/before_install_depends.sh'
+##  & cp commands within '.travis-ci/install.sh' only, everything else should
+##  be runing as "${USER}" for build processes.
 sudo: required
 ## Settings for git
 git:
