--- a/.travis.yml
+++ b/.travis.yml
@@ -60,12 +60,10 @@ script:
  - chmod +x .travis-ci/test_search_script_decrypt.sh
  - .travis-ci/test_search_script_decrypt.sh
 ## Setps to complete after success or falure
-#after_success:
-##  Run encryption/decryption save script copy tests. Note decryption still
-##  makes use of helper script for feeding the named pipe. Note the following
-##  two build scripts may cause failures if there are typos.
-# - chmod +x .travis-ci/script_encrypt_copy.sh
-# - .travis-ci/script_encrypt_copy.sh
+## Re-enabled script copy encryption tests for builds
+after_success:
+ - chmod +x .travis-ci/script_encrypt_copy.sh
+ - .travis-ci/script_encrypt_copy.sh
 # - chmod +x .travis-ci/script_decrypt_copy.sh
 # - .travis-ci/script_decrypt_copy.sh
 #after_failure:
