--- a/.travis.yml
+++ b/.travis.yml
@@ -59,11 +59,11 @@ script:
  - .travis-ci/script_decrypt.sh
  - chmod +x .travis-ci/test_search_script_decrypt.sh
  - .travis-ci/test_search_script_decrypt.sh
-## Setps to complete after success or falure
-## Re-enabled script copy encryption tests for builds
-after_success:
  - chmod +x .travis-ci/script_encrypt_copy.sh
  - .travis-ci/script_encrypt_copy.sh
+## Setps to complete after success or falure
+## Re-enabled script copy encryption tests for builds
+#after_success:
 # - chmod +x .travis-ci/script_decrypt_copy.sh
 # - .travis-ci/script_decrypt_copy.sh
 #after_failure:
