--- a/.travis.yml
+++ b/.travis.yml
@@ -52,18 +52,19 @@ before_script:
 ## - Run helper decryption again but this time test features of searching
 ##  decrypted output prior to saving to a file. This is usefull for saving
 ##  space for limited resources bound devices.
+#script:
+# - chmod +x .travis-ci/script_encrypt.sh
+# - .travis-ci/script_encrypt.sh
+# - chmod +x .travis-ci/script_decrypt.sh
+# - .travis-ci/script_decrypt.sh
+# - chmod +x .travis-ci/test_search_script_decrypt.sh
+# - .travis-ci/test_search_script_decrypt.sh
+# - chmod +x .travis-ci/script_encrypt_copy.sh
+# - .travis-ci/script_encrypt_copy.sh
 ## - Run version two of main script encryption/decryption tests
 ##  this effectivly bundles both main script and decryption
 ##  helper script operations into one script that can do either.
 script:
- - chmod +x .travis-ci/script_encrypt.sh
- - .travis-ci/script_encrypt.sh
- - chmod +x .travis-ci/script_decrypt.sh
- - .travis-ci/script_decrypt.sh
- - chmod +x .travis-ci/test_search_script_decrypt.sh
- - .travis-ci/test_search_script_decrypt.sh
- - chmod +x .travis-ci/script_encrypt_copy.sh
- - .travis-ci/script_encrypt_copy.sh
  - chmod u+x .travis-ci/version_two_tests.sh
  - .travis-ci/version_two_tests.sh
 ## Setps to complete after success or falure
