--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 Bulk_*/*
 bulk_*/*
 
+## Pulled from experiance
+.sass-cache*/*
+*.lock
+
 ## Pulled from: https://gist.github.com/octocat/9257657
 
 # Compilled source #
