--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ bulk_*/*
 ## Pulled from experiance
 .sass-cache*/*
 *.lock
-#_site*/*
+_site*/*
 
 ## Pulled from: https://gist.github.com/octocat/9257657
 
