--- a/_config.yml
+++ b/_config.yml
@@ -1,48 +1,71 @@
 # Source modification from default
 ## Referance defaults from documentation hosted at: https://jekyllrb.com/docs/configuration/
 ### Defaults that maybe overwritten
-defaults:
-#  -
-#   scope:
-#   path: "projects"
-#   type: "pages"
-  values:
-#   layout: "projects"
-   author: "S0AndS0"
-##   category: "project"
-   title: Perinoid_Pipes
-   description: Where named pipes are used for encryption
-   show-downloads: true
-   theme: jekyll-theme-hacker
-#   google_analytics:
 
 ### Where things are
-source: ./Documentation
+source: .
 destination: ./_site
 ##plugins_dir: _plugins
-##layouts_dir: _layouts
+layouts_dir: _layouts
 ##data_dir: _data
 ##collections:
 ##  posts:
 ##  output: true
 
-### Handling Reading
+### Build settings
+markdown: kramdown
 ##save: false
-##include: [".jekyll_configs/.htaccess"
-exclude: ["node_modules", "vendor/bundle", "vendor/cache/", "vendor/gems/", "vendor/ruby/", "Bulk_*"]
-##keep_files: [".git", ".svn"]
-##encoding: "utf-8"
-##marddown_ext: "markdown,mkdown,mkdn,mkd.md"
+### Plugins
+#whitelist: []
+gems:
+  - jekyll-feed
+  - github-pages
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - Bulk_*
+include:
+  - Documentation
+  - Licenses
+#  - .jekyll_configs/.htaccess
+keep_files:
+  - .git
+  - .svn
+encoding: "utf-8"
+marddown_ext: "markdown,mkdown,mkdn,mkd.md"
+
+defaults:
+#  scope:
+#    path: "Documentation"
+#    type: "pages"
+  values:
+    theme: jekyll-theme-hacker
+#    theme: minima
+    layout: "default"
+    author: "S0AndS0"
+    show-downloads: true
+    title: Perinoid Pipes
+    email: strangerthanbland@gmail.com
+    category: "Scripting"
+    description: Where named pipes, GnuPG public key encryption, and other tools are combined.
+    baseurl: /Documentation
+#    url: ""
+    twitter_username: S0AndS0
+    github_username: S0AndS0
+#   google_analytics:
+
+
 
 ### Filtering Content
 ##show_drafs: null
 ##limit_posts: 0
 ##future: false
 ##unpublished: false
-
-### Plugins
-##whitelist: []
-##gems: []
 
 ### Conversion
 ##mardown: kramdown
@@ -55,6 +78,7 @@ exclude: ["node_modules", "vendor/bundle", "vendor/cache/", "vendor/gems/", "ven
 ##detach: false
 ##port: 4000
 ##host: 127.0.0.1
+host: 0.0.0.0
 ##baseurl: "" # Does not include hostname
 ##show_dir_listing: false
 
