--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ bulk_*/*
 .sass-cache*/*
 *.lock
 _site*/*
+.jekyll-metadata
+.bundle/**
 
 ## Pulled from: https://gist.github.com/octocat/9257657
 
