Few syntax fixes for Liquid
to readers wondering about the main project scripts; authors will be
returing to those once Jekyll rendering of documents has been sorted, only
a few more additions to incorperate before it is beutifull and
functional... thanks for the pashents.

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ marddown_ext: "markdown,mkdown,mkdn,mkd.md"
 
 ## GitHub related settings
 baseurl: /Perinoid_Pipes
-repositiory: https://github.com/S0AndS0/Perinoid_Pipes
+#repositiory: https://github.com/S0AndS0/Perinoid_Pipes
+repositiory: S0AndS0/Perinoid_Pipes
 
 defaults:
   values:
